# seer

./: .gitignore  .gitmodules  AT_shortcut.kms  VisualStudioTheme.xml  capturegdb.pcapng  install.sh  install_gamaray.sh  install_openocd.sh  install_seer.sh  miscellaneous.md
DebugSeer/: CMakeLists.txt  resource.qrc  resource_qdarkstylesheet.qrc
Example/: Makefile
Example/src/: main.cpp
QProcess/: CMakeLists.txt  main.cpp
notes/: README.threads
nucleo_blink/: .mxproject  nucleo_blink.ioc
nucleo_blink/Core/Src/: main.c
nucleo_blink/STM32CubeIDE/: .cproject  .project  nucleo_blink Debug.launch
nucleo_blink/STM32CubeIDE/Debug/: makefile  objects.list
nucleo_blink/STM32CubeIDE/Debug/Application/User/Core/: subdir.mk
nucleo_blink/STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk
nucleo_blink/STM32CubeIDE/Debug/Drivers/STM32F4xx_HAL_Driver/: subdir.mk
src/: CMakeLists.txt  GdbMonitor.cpp  GdbMonitor.h  QAnsiTextEdit.cpp  QAnsiTextEdit.h  QClearLineEdit.cpp  QClearLineEdit.h  QColorButton.cpp  QColorButton.h  QColorButton.ui  QColorSwatch.cpp  QColorSwatch.h  QDetachTabWidget.cpp  QDetachTabWidget.h  QEditDelegate.cpp  QEditDelegate.h  QHContainerWidget.cpp  QHContainerWidget.h  QHContainerWidget.ui  QHistoryLineEdit.cpp  QHistoryLineEdit.h  QImageViewer.cpp  QImageViewer.h  QIndexTreeWidget.cpp  QIndexTreeWidget.h  QProcessInfo.cpp  QProcessInfo.h  QProcessInfoWidget.cpp  QProcessInfoWidget.h  QProcessInfoWidget.ui  QProgressIndicator.cpp  QProgressIndicator.h  QStringPair.h  QZoomChart.cpp  QZoomChart.h  QZoomChartView.cpp  QZoomChartView.h  SeerAboutDialog.cpp  SeerAboutDialog.ui  SeerAdaExceptionsBrowserWidget.cpp  (+232 more)
src/resources/: ABOUT.md  README.icons  seergdb.desktop
src/resources/help/: ArrayVisualizer.md  AttachDebugMode.md  BasicStructVisualizer.md  BreakpointGdbSeerManager.md  CodeManager.md  ConnectDebugMode.md  CorefileDebugMode.md  DebugModes.md  ImageVisualizer.md  MainWindow.md  MatrixVisualizer.md  MemoryVisualizer.md  Printpoints.md  RRDebugMode.md  RunDebugMode.md  Skips.md  SourceSymbolLibraryInfoBrowser.md  StackInfoBrowser.md  StructVisualizer.md  ThreadProcessInfoBrowser.md  VariableRegisterInfoBrowser.md  seergdb.hlp
src/resources/mi-python/: MICatchpoint.py  MICheckpoint.py  MIEcho.py  MIKill.py  MISkip.py  gdblsmod.gdb
src/resources/qdarkstyle/: ABOUT.md
src/resources/qdarkstyle/dark/: darkstyle.qss
src/resources/qdarkstyle/light/: lightstyle.qss
src/resources/thenounproject/: fortune-teller.readme
stm32f1_blink/: Makefile  build.sh
stm32f1_blink/src/: main.c
